<resources>
    <string name="app_name">POS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">POS Machine</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_register">POS Register Item</string>
    <string name="menu_sale">POS Sale</string>
    <string name="register_code">Code</string>
    <string name="register_item">Item</string>
    <string name="register_unit">Unit</string>
    <string name="register_unit_price">Unit Price</string>
    <string name="btn_save">Save</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_search">Search</string>
    <string name="btn_add">Add</string>
    <string name="sale_item">Item</string>
    <string name="sale_quantity">Quantity</string>
    <string name="item_hint">" "</string>
    <string name="code_hint" />
    <string name="sale_total">Total</string>
    <string name="tax">TAX (15%)</string>
    <string name="payable">Payable</string>
    <string name="paid">Paid</string>
    <string name="reset">Reset</string>
    <string name="quantity_hint" />
</resources>