<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_and_sale_fragment.SaleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register_and_sale_fragment.SaleFragment">

        <TextView
            android:id="@+id/text_sale"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="46dp"
            android:fontFamily="@font/mitr"
            android:text="@string/register_code"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/sale_code_value1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sale_quantity_value"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_add"
            app:layout_constraintLeft_toRightOf="@+id/sale_quantity"
            app:layout_constraintTop_toBottomOf="@id/sale_item_value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/unit_quantity_value1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="37dp"
            android:fontFamily="@font/mitr"
            android:text="@string/btn_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/sale_code_value1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sale_item"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="46dp"
            android:fontFamily="@font/mitr"
            android:text="@string/sale_item"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/sale_item_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_search" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sale_item_value"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="37dp"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/sale_item"
            app:layout_constraintTop_toBottomOf="@id/sale_code_value1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sale_item_value1"
                android:layout_width="match_parent"
                android:focusable="false"
                android:enabled="false"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sale_quantity"
            android:layout_width="109dp"
            android:layout_height="36dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/mitr"
            android:text="@string/sale_quantity"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/sale_quantity_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sale_item" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sale_code_value1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_search"
            app:layout_constraintLeft_toRightOf="@+id/text_sale"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/unit_price_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="37dp"
            android:fontFamily="@font/mitr"
            android:text="@string/btn_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/sale_quantity_value"
            app:layout_constraintTop_toBottomOf="@id/sale_item_value" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="406dp"
            android:layout_height="219dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sale_quantity_value" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/mitr"
            android:text="@string/sale_total"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/total_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_recycler_view" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/total_price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="37dp"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/total"
            app:layout_constraintTop_toBottomOf="@id/my_recycler_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total_price1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:enabled="false"
                android:focusable="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/mitr"
            android:text="@string/tax"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/total_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tax_price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="37dp"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/total"
            app:layout_constraintTop_toBottomOf="@id/total_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tax_price1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:enabled="false"
                android:focusable="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/payable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/mitr"
            android:text="@string/payable"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/total_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tax_price" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/payable_price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="37dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/total"
            app:layout_constraintTop_toBottomOf="@id/tax_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/payable_price1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:focusable="false"
                android:enabled="false"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/paid"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"

            android:text="@string/paid"
            app:layout_constraintEnd_toStartOf="@+id/sale_reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payable" />

        <Button
            android:id="@+id/sale_reset"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/paid"
            app:layout_constraintTop_toBottomOf="@id/payable" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
