<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_and_sale_fragment.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register_and_sale_fragment.RegisterFragment">

        <TextView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/mitr"
            android:paddingLeft="25dp"
            android:text="@string/register_code"
            android:textColor="#121111"
            android:textColorHint="#0B0A0A"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/code_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/code_value"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="128dp"
            android:layout_height="52dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="135dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/code"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/code_value1"
                android:layout_width="124dp"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/item"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mitr"
            android:paddingLeft="25dp"
            android:text="@string/register_item"
            android:textColor="#151515"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/item_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code_value" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_value"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="227dp"
            android:layout_height="55dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/item"
            app:layout_constraintTop_toBottomOf="@id/code_value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_value1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/mitr"
            android:paddingLeft="25dp"
            android:text="@string/register_unit"
            android:textColor="#0E0E0E"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/unit_price"
            app:layout_constraintEnd_toStartOf="@+id/unit_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/unit_value"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="135dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/unit"
            app:layout_constraintTop_toBottomOf="@id/item_value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/unit_value1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/unit_price"
            android:layout_width="123dp"
            android:layout_height="31dp"
            android:layout_marginTop="33dp"
            android:paddingLeft="19dp"
            android:text="@string/register_unit_price"
            android:textColor="#101010"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_save"
            app:layout_constraintEnd_toStartOf="@+id/unit_price_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/unit_value"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/unit_price_value"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="135dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/unit_price"
            app:layout_constraintTop_toBottomOf="@id/unit_value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/unit_price_value1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/mitr"
            android:layout_marginStart="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/btn_save"
            app:layout_constraintEnd_toStartOf="@+id/btn_reset"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/unit_price_value" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/mitr"
            android:text="@string/btn_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_save"
            app:layout_constraintTop_toBottomOf="@id/unit_price_value" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
